style.css
@font-face {  
	font-family: password;  
	src: url('font/password.ttf') format('truetype');  
}

html, body {
	height: 100%;
	width: 100%;
	padding: 0;
	margin: 0;
}

#unauthorized {
	position: fixed;
	top: 0;
	text-align: center;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	background: url('wallpaper.png') repeat center center fixed;
}

#welcome {
	margin-top: 17%;
}

#authorized {
	position: relative;
	padding: 2em;
}

#lastModified {
	display: block;
	position: absolute;
	top: 2.4em;
	right: 2em;
}

h1 {
	padding-bottom: 1.2em;
}

#decrypt {
	display: inline;
}

a:not(:last-child) {
	margin-right: .5em;
}

.hidden {
	display: none;
}

#overlay {
	width: 100%;
	height: 100%;
	position: fixed;
	top: 0;
	left: 0;
	background-color: rgba(0, 0, 0, 0.5);
	z-index: 10;
}

table {
	width: 100%;
}

td {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
	/* max-width: ; */
}

tr:not(.exposed) td .obscured {
	display: inline-block;
	white-space: nowrap;
	overflow: hidden;
	max-width: 4em;
	font-family: password;
	word-spacing: -.30em;
}

